--- a/lib/package.json
+++ b/lib/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.1.4",
+    "color": "^4.2.3",
+    "inquirer": "^8.2.4",
     "jest": "^29.4.3"
   }
 }
